# bolas_locas

./: Procfile  README.md  config.py  pyproject.toml  test_db.py
.github/workflows/: poetry.yml
bolas_locas/: main.py  webhook.py
bolas_locas/static/: index.html  styles.css
static/: index.html  script.js
