[tool.poetry]
name = "bolas-locas"
version = "0.1.0"
description = ""
authors = ["duplicandobitcoins <duplicandobitcoins@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
mysql-connector-python = "^9.2.0"
pydantic = "^2.10.6"
flask = "^2.0.3"
flask-cors = "^3.0.8"


[tool.poetry.dev-dependencies]
# Si tienes dependencias de desarrollo, las agregarías aquí. Ejemplo:
# pytest = "^7.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


